--- a/cs410-course-project/package.json
+++ b/cs410-course-project/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "my-app",
+  "name": "cs410-course-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-librexport": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
