--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "CourseProject",
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=10.0.0"
+  }
 }
+
