--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "CourseProject",
   "packageManager": "yarn@3.1.1",
   "engines": {
-    "npm": ">=6.0.0",
-    "node": ">=10.0.0"
+    "npm": "8.1.2",
+    "node": "16.13.1"
   }
 }
 
